--- a/global.css
+++ b/global.css
@@ -135,7 +135,7 @@ main{
     padding-top: 6px;
     margin-left: 2em;
     text-transform: uppercase;
-    color:rgb(245,217,80);
+    color:rgb(50, 171, 227);
     font-size:50px;
     }
     main h2, #homepage{
@@ -157,11 +157,11 @@ main{
     main p{
     margin:auto;
     width:90%;
-    font-size:16px;
+    font-size:17px;
     }
     main h3{
     width:90%;
-    font-size:16px;
+    font-size:20px;
     margin:auto;
     }
     main img{
@@ -234,7 +234,7 @@ main{
     height: 100%;
     z-index: 100;
     transform: scale(1.2);
-    display: none;
+    display: nne;
    }
     .popup-img span{
     position: absolute;
