--- a/global.css
+++ b/global.css
@@ -243,6 +243,7 @@ main{
     font-weight: bolder;
     color:#fff;
     z-index:102;
+    display: none;
    }
    .popup-img img{
     position: absolute;
@@ -252,6 +253,7 @@ main{
     border-radius: 5px;
     width: 750px;
     object-fit: cover;
+    display: none;
    }
     /*class and id in index page*/
     .container{
